Live Text selections inside images is misaligned when "object-fit" is not "fill" https://bugs.webkit.org/show_bug.cgi?id=227453

Reviewed by Tim Horton.

Source/WebCore:

We currently use the bounds of the image overlay host element when injecting transformed Live Text into image
element UA shadow roots. However, this causes text to lay out in the wrong place relative to the image when
using any "object-fit" values that are not "fill". To address this, use the `replacedContentRect()` of the image
renderer when injecting OCR text quads instead.

Tests: fast/images/text-recognition/image-overlay-object-fit-change.html
       fast/images/text-recognition/image-overlay-object-fit.html

* html/HTMLElement.cpp:
(WebCore::HTMLElement::updateWithTextRecognitionResult): See description above for more details.
* page/Page.cpp:
(WebCore::Page::updateElementsWithTextRecognitionResults):

We also refactor this code so that we don't immediately try to update text recognition results, and instead
queue an internal async task to do so. Immediately performing the update here can potentially cause a debug
assertion due to leaving us in a state where we require layout immediately after a rendering update.

(WebCore::Page::cacheTextRecognitionResult):

Additionally adjust the text recognition result caching mechanism to update image overlay content when changing
the replaced content rect, rather than the element's offset width or height. This ensures that changing CSS
"object-fit" values dynamically for images with Live Text causes Live Text bounds to stay up to date.

* page/Page.h:

LayoutTests:

Add a couple of new tests, and do some minor cleanup in an existing test.

* fast/images/text-recognition/image-overlay-object-fit-change-expected.txt: Added.
* fast/images/text-recognition/image-overlay-object-fit-change.html: Added.

Add a layout test to verify that dynamically changing CSS "object-fit" values for an image with Live Text causes
the dimensions of the Live Text to update as well.

* fast/images/text-recognition/image-overlay-object-fit-expected.txt: Added.
* fast/images/text-recognition/image-overlay-object-fit.html: Added.

Add a layout test to verify that Live Text is injected correctly when using all 5 values of "object-fit".

* fast/images/text-recognition/image-overlay-size-change.html:

Clean up this layout test a bit: remove an unnecessarily included script file, add a missing `head` tag and
don't try to inject an image overlay 10 times.


Canonical link: https://commits.webkit.org/239217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279349 268f45cc-cd09-0410-ab3c-d52691b4dbfc